fixed modals on ios safari.  -webkit-overflow-scrolling is the issue, but needed, so we turn it off for modals

--- a/src/css/act_browser.scss
+++ b/src/css/act_browser.scss
@@ -349,7 +349,11 @@ body{
         overflow-y: auto;
         overflow-x: hidden;
         -webkit-overflow-scrolling: touch;
-         -webkit-backface-visibility: hidden;
+        -webkit-backface-visibility: hidden;
+
+        &.showing-modal{
+            -webkit-overflow-scrolling: auto;
+        }
 
         @media (min-width: $screen-md-min) {
             top: $top-bar-height;
@@ -657,7 +661,11 @@ body{
     .modal-backdrop{
       position: fixed;
       bottom:0;
-      z-index: 1030;
+      z-index: 1040;
+
+      .modal-dialog{
+        z-index: 1050;
+      }
     }
       .modal-dialog,
       .modal-content{
